z-index fix

--- a/assets/scss/sections/handle.scss
+++ b/assets/scss/sections/handle.scss
@@ -282,6 +282,7 @@
             left: inherit;
             right: 0;
             transform: translateX(100%);
+            z-index: 2;
             border-top: none;
         }
 
